# Copyright (c) 2022-2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

group("user_file_service_fuzz_test") {
  testonly = true

  deps = [
    "externalfileaccesspartone_fuzzer:ExternalFileAccessPartOneFuzzTest",
    "externalfileaccessrenamefile_fuzzer:ExternalFileAccessRenameFileFuzzTest",
    "externalfileaccesscreate_fuzzer:ExternalFileAccessCreateFuzzTest",
    "externalfileaccessdeletefile_fuzzer:ExternalFileAccessDeleteFileFuzzTest",
    "externalfileaccessmovefile_fuzzer:ExternalFileAccessMoveFileFuzzTest",
    "externalfileaccesspartthree_fuzzer:ExternalFileAccessPartThreeFuzzTest",
    "externalfileaccessaccess_fuzzer:ExternalFileAccessAccessFuzzTest",
    "externalfileaccesscreatefile_fuzzer:ExternalFileAccessCreateFileFuzzTest",
    "externalfileaccessdelete_fuzzer:ExternalFileAccessDeleteFuzzTest",
    "externalfileaccessgetfileinfofromrelativepath_fuzzer:ExternalFileAccessGetFileInfoFromRelativePathFuzzTest",
    "externalfileaccessgetfileinfofromuri_fuzzer:ExternalFileAccessGetFileInfoFromUriFuzzTest",
    "externalfileaccessgetroots_fuzzer:ExternalFileAccessGetRootsFuzzTest",
    "externalfileaccesslistfile_fuzzer:ExternalFileAccessListFileFuzzTest",
    "externalfileaccessmkdir_fuzzer:ExternalFileAccessMkdirFuzzTest",
    "externalfileaccessmove_fuzzer:ExternalFileAccessMoveFuzzTest",
    "externalfileaccessopenfile_fuzzer:ExternalFileAccessOpenFileFuzzTest",
    "externalfileaccessrename_fuzzer:ExternalFileAccessRenameFuzzTest",
    "externalfileaccessscanfile_fuzzer:ExternalFileAccessScanFileFuzzTest",
    "fileaccessextcreatefile_fuzzer:FileAccessExtCreateFileFuzzTest",
    "fileaccessextbaseproxylistfile_fuzzer:FileAccessExtBaseProxyListFileFuzzTest",
    "fileaccessextbaseproxymkdir_fuzzer:FileAccessExtBaseProxyMkdirFuzzTest",
    "fileaccessextbaseproxymove_fuzzer:FileAccessExtBaseProxyMoveFuzzTest",
    "fileaccessextbaseproxyopenfile_fuzzer:FileAccessExtBaseProxyOpenFileFuzzTest",
    "fileaccessextbaseproxyrename_fuzzer:FileAccessExtBaseProxyRenameFuzzTest",
    "fileaccessextbaseproxyscanfile_fuzzer:FileAccessExtBaseProxyScanFileFuzzTest",
    "fileaccessextbaseproxyurie_fuzzer:FileAccessExtBaseProxyUrieFuzzTest",
    "fileaccessextgetroots_fuzzer:FileAccessExtGetRootsFuzzTest",
    "fileaccessextquery_fuzzer:FileAccessExtQueryFuzzTest",
    "fileaccessextstartwatcher_fuzzer:FileAccessExtStartWatcherFuzzTest",
    "fileaccessextstopwatcher_fuzzer:FileAccessExtStopWatcherFuzzTest",
    "fileaccessextmoveitem_fuzzer:FileAccessExtMoveItemFuzzTest",
    "fileaccessextmovefile_fuzzer:FileAccessExtMoveFileFuzzTest",
    "fileaccessextdelete_fuzzer:FileAccessExtDeleteFuzzTest",
    "fileaccessextconnectfileextability_fuzzer:FileAccessExtConnectFileExtAbilityFuzzTest",
    "fileaccessextcopy_fuzzer:FileAccessExtCopyFuzzTest",
    "fileaccessextcopyfile_fuzzer:FileAccessExtCopyFileFuzzTest",
    "fileaccessextdisconnection_fuzzer:FileAccessExtDisConnectionFuzzTest",
    "fileaccessextgetfileinfo_fuzzer:FileAccessExtGetFileInfoFuzzTest",
    "fileaccessextaccess_fuzzer:FileAccessExtAccessFuzzTest",
    "fileaccessextconnection_fuzzer:FileAccessExtConnectionFuzzTest",
    "fileaccessserviceactive_fuzzer:FileAccessServiceActiveFuzzTest",
    "fileaccessservicebaseproxy_fuzzer:FileAccessServiceBaseProxyFuzzTest",
    "fileaccessserviceconnectfileextability_fuzzer:FileAccessServiceConnectFileExtAbilityFuzzTest",
    "fileaccessservicedeactive_fuzzer:FileAccessServiceDeactiveFuzzTest",
    "fileaccessservicegetallsyncfolders_fuzzer:FileAccessServiceGetAllSyncFoldersFuzzTest",
    "fileaccessservicegetallsyncfoldersforsa_fuzzer:FileAccessServiceGetAllSyncFoldersForSaFuzzTest",
    "fileaccessservicegetsyncfolders_fuzzer:FileAccessServiceGetSyncFoldersFuzzTest",
    "fileaccessserviceregister_fuzzer:FileAccessServiceRegisterFuzzTest",
    "fileaccessserviceunregister_fuzzer:FileAccessServiceUnregisterFuzzTest",
    "fileaccessserviceunregisterforsa_fuzzer:FileAccessServiceUnregisterForSaFuzzTest",
    "fileaccessserviceunregisternotifynoobserver_fuzzer:FileAccessServiceUnregisterNotifyNoObserverFuzzTest",
    "fileaccessserviceupdatedisplayname_fuzzer:FileAccessServiceUpdateDisplayNameFuzzTest",
    "fileinfosharedmemory_fuzzer:FileInfoSharedMemoryFuzzTest",
    "useraccessgetusername_fuzzer:UserAccessGetUserNameFuzzTest",
    "useraccessisfullmount_fuzzer:UserAccessIsFullMountFuzzTest",
  ]
}